<resources>
    <string name="app_name">happy2style</string>
    <string name="title_home">Home</string>
    <string name="title_appointment">My Appointment</string>
    <string name="title_account">Account</string>
    <!--Home Fragment Card Names-->
    <string name="beauty_salon">Beauty Salon</string>
    <string name="hair_salon">Hair Salon</string>
    <string name="spa">Spa</string>
    <string name="barbershop">BarberShop</string>
    <string name="massage">Massage</string>
    <string name="therapy_center">Therapy Center</string>

    <string name="nail_salon">Nail Salon</string>
    <!--Home Fragment TextViews-->
    <string name="tag_line">Your Fashion our goal!!!!</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="more_categories">More Categories</string>
    <string name="top_rated_beauty_salon">Top Rated Beauty Salons</string>
    <string name="top_rated_hair_salon">Top Rated Hair Salons</string>
    <string name="top_rated_spa">Top Rated Spas</string>
    <!--Preference 1 menu-->
    <string name="men_and_women">Men and Women</string>
    <string name="women_only">Women Only</string>
    <string name="men_only">Men Only</string>

    <!--Preference 2 menu-->
    <string name="nearest">Nearest</string>
    <string name="top_rated">Top Rated</string>
    <string name="newest">Newest</string>
    <string name="lowest_price">Lowest Price</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search_for_a_service_or_venue">Search for a service or venue</string>


</resources>
