<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.home.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="80dp"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@mipmap/group"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/group1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/textMargins"
                android:layout_marginStart="@dimen/textMargins"
                android:layout_marginEnd="@dimen/textMargins"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@string/tag_line'
                android:textColor="@color/colorWhite"
                android:layout_marginStart="@dimen/textMargins"
                android:layout_marginEnd="@dimen/textMargins"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/search_bar"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="@dimen/textMargins"
                android:layout_marginEnd="@dimen/textMargins"
                android:background="@drawable/rounder_corner_searchbox"
                android:text="@string/search_for_a_service_or_venue"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/popular_categories"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="@dimen/Margin"
                android:textSize="18sp"
                />

        </LinearLayout>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/group1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2"
            >

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:rowCount="2"
                android:columnCount="2"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                >


                <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/beauty_salon"
                        app:cardCornerRadius="@dimen/cardCorner"
                        app:cardElevation="@dimen/CardElevation"
                        android:layout_margin="@dimen/Margin"

                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="175dp"
                                android:layout_height="100dp"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text='@string/beauty_salon'
                                android:textStyle="bold"
                                android:layout_margin="5dp"
                                android:textAlignment="center"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/hair_salon"
                        app:cardCornerRadius="@dimen/cardCorner"
                        app:cardElevation="@dimen/CardElevation"
                        android:layout_margin="@dimen/Margin">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="175dp"
                                android:layout_height="100dp"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text='@string/hair_salon'
                                android:textStyle="bold"
                                android:layout_margin="5dp"
                                android:textAlignment="center"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spa"
                        app:cardCornerRadius="@dimen/cardCorner"
                        app:cardElevation="@dimen/CardElevation"
                        android:layout_margin="@dimen/Margin"
                       >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="175dp"
                                android:layout_height="100dp"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text='@string/spa'
                                android:textStyle="bold"
                                android:textAlignment="center"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/barbershop"
                        app:cardCornerRadius="@dimen/cardCorner"
                        app:cardElevation="@dimen/CardElevation"
                        android:layout_margin="@dimen/Margin"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="175dp"
                                android:layout_height="100dp"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text='@string/barbershop'
                                android:textStyle="bold"
                                android:textAlignment="center"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


            </GridLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_categories"
                android:layout_marginStart="@dimen/textMargins"
                android:layout_marginEnd="@dimen/textMargins"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="5dp"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/massage"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/Margin"
                    app:cardCornerRadius="@dimen/cardCorner"
                    app:cardElevation="@dimen/CardElevation"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"

                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@string/massage'
                            android:textStyle="bold"
                            android:textAlignment="center"/>
                        </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/therapy_center"
                    app:cardCornerRadius="@dimen/cardCorner"
                    app:cardElevation="@dimen/CardElevation"
                    android:layout_margin="@dimen/Margin"
                   >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"

                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@string/therapy_center'
                            android:textStyle="bold"
                            android:textAlignment="center"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/nail_salon"
                    app:cardCornerRadius="@dimen/cardCorner"
                    app:cardElevation="@dimen/CardElevation"
                    android:layout_margin="@dimen/Margin"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"

                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@string/nail_salon'
                            android:textStyle="bold"
                            android:textAlignment="center"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rated_hair_salon"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/top_hairsalon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </androidx.recyclerview.widget.RecyclerView>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rated_beauty_salon"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/top_beautysalon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </androidx.recyclerview.widget.RecyclerView>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rated_spa"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/top_spa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </androidx.recyclerview.widget.RecyclerView>



            </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>